<resources>
    <string name="app_name">R-Kit</string>
    <string name="app_package">com.example.michaelwaterworth.r_kit</string>
    <string name="base_url">http://192.168.1.106:80</string>
    <string name="upload_path">/response</string>
    <string name="title_section1">Upcoming tasks</string>
    <string name="title_section2">Saved data</string>
    <string name="title_section3">About</string>
    <string name="upcoming">Upcoming</string>
    <string name="upcoming_week">This week</string>
    <string name="upcoming_month">This month</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="done_button">Done</string>
    <string name="next_button">Next</string>
    <string name="get_started_button">Get Started</string>
    <string name="task_intro_page1_title">Welcome to R-Kit</string>
    <string name="task_intro_page1_subtitle">R-Kit is an innovative new research tool for Android. It\'s adaptable to fit your needs. Check it out on GitHub now or explore this app to see some example features.</string>
    <string name="task_intro_page2_title">Terms &amp; Conditions</string>
    <string name="task_intro_page2_subtitle">Please agree to the terms and conditions</string>
    <string name="task_intro_page2_button">I Agree</string>
    <string name="task_intro_page3_title">Signature</string>
    <string name="task_intro_page3_subtitle">I consent to the agree by the R-Kit terms and conditions</string>
    <string name="task_empty_signature">Please sign</string>
    <string name="task_intro_t_c">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et elit fringilla, consectetur enim at, vulputate libero. Maecenas id turpis dui. Suspendisse elementum varius molestie. Morbi suscipit convallis magna ut gravida. Nunc sed ligula erat. Fusce semper, velit eu suscipit sollicitudin, libero ante sagittis tortor, quis consequat ante metus quis nisi. Sed vehicula ipsum dui, eu consequat risus suscipit vitae. Proin at pellentesque magna. Morbi faucibus aliquet ornare. Vivamus pretium convallis eros, in ultrices est posuere at. Maecenas ullamcorper odio nec risus interdum vestibulum. Aenean iaculis purus ut est lacinia ultrices. Donec gravida, sem eget dictum consectetur, orci mauris sagittis eros, sit amet blandit ligula purus non magna. \n Phasellus facilisis, enim in tempor mollis, ipsum massa ullamcorper risus, et pellentesque ante elit et mauris. Aliquam convallis libero eget dolor dictum pulvinar lacinia vel augue. Cras dapibus bibendum euismod. Aenean viverra, elit rutrum semper blandit, diam diam eleifend lacus, sit amet blandit mauris libero sed mi. Donec convallis mollis mi eu iaculis. Aliquam lacinia metus nisl, vitae tincidunt massa consequat et. Ut a nibh commodo, iaculis ipsum eget, mattis urna. Vivamus faucibus nisi leo. Praesent rhoncus lorem in dolor placerat, et commodo tellus suscipit. Donec gravida turpis sit amet lacus mattis mollis. \n Fusce lobortis mauris id nisl cursus, non tincidunt dui molestie. Quisque a dapibus libero, sed rhoncus neque. Aenean a magna odio. Aliquam lectus mauris, pellentesque eu ullamcorper vestibulum, pharetra eu urna. Praesent finibus consectetur erat et porta. Nunc sit amet risus fermentum, tincidunt est eget, lacinia nunc. Cras ac est quis elit vehicula ullamcorper. Aliquam mauris sapien, rhoncus in iaculis non, dignissim eget leo. Etiam neque magna, commodo a molestie vitae, congue at eros. Duis egestas condimentum ornare. Mauris nulla mi, fermentum molestie feugiat quis, faucibus non magna. Nullam sollicitudin metus tellus, pellentesque convallis eros iaculis vel. Proin egestas quam a ornare placerat. \n Proin rutrum sapien vel justo eleifend, quis dignissim odio facilisis. In tristique sapien mauris, rhoncus congue est consequat sed. Suspendisse quis libero vel est faucibus dapibus eget nec quam. Sed tristique nec ante viverra pellentesque. Fusce pharetra sollicitudin odio quis sodales. Praesent eget dolor ac diam scelerisque semper at quis nibh. Praesent lobortis suscipit quam, at ullamcorper mauris iaculis id. \n Suspendisse potenti. Praesent porttitor ligula non lobortis interdum. Praesent orci ligula, facilisis eget feugiat eu, cursus eu sapien. Vestibulum feugiat mauris nibh, ut faucibus tortor faucibus ut. Fusce vel sapien ut mi aliquet aliquet nec quis purus. Pellentesque condimentum mi nunc, non finibus augue tristique non. Nam eget auctor dui. Ut non finibus justo. Sed lorem enim, fermentum a sem eu, consequat volutpat mauris. Sed mattis, risus non scelerisque pulvinar, magna urna dignissim massa, id sagittis est arcu in lorem. Nam vel porta risus, interdum pellentesque dui. Mauris condimentum nec orci at dapibus. Etiam non suscipit dolor, sit amet auctor sem. Suspendisse lobortis vestibulum condimentum. Morbi libero lectus, blandit quis nibh rhoncus, ultrices semper ante. Ut et elit diam. \n Morbi feugiat ligula eu nunc maximus tempor ac eget velit. Etiam at dui ac ante tincidunt porttitor vitae in felis. Quisque at dui nec sem placerat efficitur in eget ex. Pellentesque eget sem luctus, rhoncus massa sit amet, ornare nisl. Aliquam quis convallis ex, at aliquam ligula. Sed ornare ex vel ex tempus, non consequat libero dapibus. Nunc et tortor urna. Curabitur consectetur rutrum erat, ultrices sagittis purus imperdiet sed. Mauris ornare, erat a consequat pellentesque, erat lorem venenatis sapien, vitae auctor quam erat non erat. Morbi eget augue mauris. Ut interdum pulvinar hendrerit. Sed lacinia urna eget dictum pulvinar. Phasellus viverra velit egestas erat cursus, vel condimentum sapien sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. \n In magna felis, mattis id elementum ac, volutpat eu justo. Donec quam orci, convallis sit amet laoreet vel, ullamcorper in augue. Donec laoreet varius iaculis. Suspendisse sit amet posuere velit. Ut a ligula arcu. Suspendisse eget tempor nisl, quis suscipit sem. Vivamus turpis odio, convallis pharetra ante et, placerat finibus orci. Pellentesque lorem purus, porta nec ultrices imperdiet, molestie et tellus. Pellentesque sapien metus, venenatis imperdiet augue non, vulputate tempus nisl. Aliquam a semper augue, sed maximus purus. Cras nisi dolor, egestas vel venenatis in, vulputate eu lorem. Donec posuere consectetur eros, sit amet euismod est sodales a. Quisque odio lorem, elementum eget auctor vitae, vestibulum eget ex. Vivamus scelerisque pulvinar erat at commodo. \n Sed elit augue, gravida vitae velit ac, blandit malesuada nisl. Praesent posuere iaculis risus at viverra. Curabitur eget aliquam ex. Donec sem ante, molestie id blandit id, efficitur vel mauris. Sed ligula ligula, finibus eget egestas vitae, eleifend in odio. Ut non euismod mauris, ut euismod tellus. Donec ut cursus magna. Suspendisse ligula elit, fringilla eget turpis ut, convallis faucibus tortor. Pellentesque blandit consequat tincidunt. Suspendisse ut elit nec eros pellentesque molestie pretium eu sapien. Maecenas placerat ut magna eu fermentum. \n Ut pellentesque dictum lacinia. Sed accumsan fringilla nisl vitae pretium. Integer eros sapien, maximus eget feugiat eu, maximus at odio. Cras pharetra ultricies dapibus. Vivamus hendrerit facilisis congue. Mauris varius viverra nisl, sed ultrices risus eleifend eget. Curabitur convallis aliquet ipsum, sed eleifend dui. \n Proin malesuada, lectus sed aliquet cursus, tellus ipsum porta nibh, vitae porttitor enim neque ut lacus. Vivamus auctor nunc sit amet faucibus pharetra. Mauris sed quam imperdiet, eleifend erat a, pretium lectus. Ut sagittis nunc in neque vehicula consequat. Nam quis felis id lacus rutrum elementum sed ac ex. Sed eu sem nunc. Quisque commodo imperdiet risus, nec euismod eros tempor id. Ut tortor tortor, interdum eu felis in, venenatis commodo nibh. Fusce eleifend, justo tristique faucibus semper, lectus orci scelerisque nisl, id cursus elit nulla sit amet felis. Sed lobortis cursus turpis, eu vestibulum diam rutrum in. Etiam ultricies vel ante aliquam aliquet. Aenean faucibus, odio vitae vehicula luctus, est arcu tristique mauris, eu semper tortor augue vitae quam. Nullam in purus tempus, consectetur risus sed, finibus nunc. Pellentesque semper ligula sit amet dignissim feugiat. Aliquam faucibus a arcu euismod pharetra.</string>
    <string name="task_completed_title">Task Complete</string>
    <string name="task_completed_subtitle">Thanks for completing the task. Your results will be uploaded.</string>
        <string name="task_biovici_title">Biovici reader</string>
        <string name="task_biovici_page1_subtitle">Use the Biovici reader to measure your hormone levels</string>
        <string name="task_biovici_turnon_title">Turn on bluetooth</string>
        <string name="task_biovici_turnon_subtitle">Please turn on bluetooth to use the Biovici reader</string>
        <string name="turnon_button">Turn on bluetooth</string>
        <string name="task_biovici_pair_title">Connect to Biovici reader</string>
        <string name="task_biovici_pair_subtitle">Please select the biovici reader below, or search for new devices to add</string>
        <string name="scanning">Scanning for devices</string>
        <string name="select_device">Select a device to connect</string>
        <string name="none_paired">No devices have been paired</string>
        <string name="none_found">No devices found</string>
        <string name="title_paired_devices">Paired Devices</string>
        <string name="title_other_devices">Other Available Devices</string>
        <string name="button_scan">Scan for devices</string>
        <string name="task_biovici_calibrate_title">Calibrate strip</string>
        <string name="task_biovici_calibrate_subtitle">Insert test strip to calibrate</string>
        <string name="task_biovici_calibrate_success">Calibrated</string>
        <string name="task_biovici_reading_title">Take reading</string>
        <string name="task_biovici_read_subtitle">Place strip on tongue for 5 seconds then plug in to reader</string>
        <string name="task_biovici_read_progress">Analysing</string>
    <string name="task_biovici_checkmark_description">Checkmark</string>
    <string name="task_biovici_read_description">Read device</string>
    <string name="task_biovici_calibrate_description">Calibrate</string>
    <string name="task_biovici_scan_description">Scan</string>
    <string name="task_biovici_bluetooth_description">Bluetooth</string>
    <string name="task_tapping_page3_title">Tap the buttons as quickly as you can using two fingers.</string>
    <string name="task_tapping_button">Tap</string>
    <string name="task_tapping_title">Tapping Speed</string>
    <string name="task_tapping_page1_subtitle">This activity measures your tapping speed.</string>
    <string name="task_tapping_page2_subtitle">Rest your phone on a flat surface. Two buttons will appear on your screen for 20 seconds. Using two fingers on the same hand, take turns tapping the buttons as quickly as you can. \n Tap get started to begin.</string>
    <string name="task_tapping_page2_next_button">Get Started</string>
    <string name="task_tapping_page3_counter_label">Total taps</string>
    <string name="task_spatial_title">Spatial Memory</string>
    <string name="task_spatial_page1_subtitle">This activity measures your short-term spatial memory by asking you to repeat the order in which flowers light up.</string>
    <string name="task_spatial_page2_subtitle">Some of the flowers will light up one at a time. Tap those flowers in the same order they lit up. To begin tap Get Started then watch closely.</string>
    <string name="task_spatial_page3_title">Watch the flowers light up</string>
    <string name="task_spatial_page3_flowers_label">Flowers</string>
</resources>