<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_switcher"
    tools:context=".SpatialMemoryTask"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/page_1"
        android:layout_margin="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/task_spatial_title"
            android:id="@+id/page1_title"
            android:layout_marginTop="57dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/task_spatial_page1_subtitle"
            android:id="@+id/page1_subtitle"
            android:layout_marginTop="57dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <ImageView
            android:layout_width="427dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/memory_phone"
            android:layout_weight="0.63" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:onClick="buttonNext"
            android:longClickable="true"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/page_2"
        android:layout_margin="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/task_spatial_title"
            android:id="@+id/page2_title"
            android:layout_marginTop="57dp"
            android:layout_gravity="center_horizontal" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/task_spatial_page2_subtitle"
            android:id="@+id/page2_subtitle"
            android:layout_marginTop="57dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <ImageView
            android:layout_width="427dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/memory_phone"
            android:layout_weight="0.63" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started_button"
            android:id="@+id/tapping_page1_next"
            android:onClick="buttonNext"
            android:longClickable="true"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_memory"
        tools:context=".MemoryActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Memory"
            android:id="@+id/textView2" />

        <GridLayout
            android:layout_width="300dip"
            android:layout_height="300dip"
            android:layout_gravity="center_horizontal"
            android:columnCount="3"
            android:rowCount="4">

            <Button
                android:background="@drawable/memory_flower_default"
                android:layout_width="@dimen/memory_flower_size"
                android:layout_height="@dimen/memory_flower_size"
                android:id="@+id/button_memory_1_1"
                android:layout_gravity="right"
                android:onClick="tapped"
                android:layout_row="0"
                android:layout_column="0" />

            <Button
                android:background="@drawable/memory_flower_default"
                android:layout_width="@dimen/memory_flower_size"
                android:layout_height="@dimen/memory_flower_size"
                android:id="@+id/button_memory_1_2"
                android:layout_gravity="right"
                android:onClick="tapped"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_row="0"
                android:layout_column="1" />

            <Button
                android:background="@drawable/memory_flower_default"
                android:layout_width="@dimen/memory_flower_size"
                android:layout_height="@dimen/memory_flower_size"
                android:id="@+id/button_memory_1_3"
                android:layout_gravity="right"
                android:onClick="tapped"
                android:layout_row="0"
                android:layout_column="2" />

            <Button
                android:background="@drawable/memory_flower_default"
                android:layout_width="@dimen/memory_flower_size"
                android:layout_height="@dimen/memory_flower_size"
                android:id="@+id/button_memory_2_1"
                android:layout_gravity="right"
                android:onClick="tapped"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_row="1"
                android:layout_column="0" />

            <Button
                android:background="@drawable/memory_flower_default"
                android:layout_width="@dimen/memory_flower_size"
                android:layout_height="@dimen/memory_flower_size"
                android:id="@+id/button_memory_2_2"
                android:layout_gravity="right"
                android:onClick="tapped"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_row="1"
                android:layout_column="1" />

            <Button
                android:background="@drawable/memory_flower_default"
                android:layout_width="@dimen/memory_flower_size"
                android:layout_height="@dimen/memory_flower_size"
                android:id="@+id/button_memory_2_3"
                android:layout_gravity="right"
                android:onClick="tapped"
                android:layout_row="1"
                android:layout_column="2" />

            <Button
                android:background="@drawable/memory_flower_default"
                android:layout_width="@dimen/memory_flower_size"
                android:layout_height="@dimen/memory_flower_size"
                android:id="@+id/button_memory_3_1"
                android:layout_gravity="right"
                android:onClick="tapped"
                android:layout_row="2"
                android:layout_column="0" />

            <Button
                android:background="@drawable/memory_flower_default"
                android:layout_width="@dimen/memory_flower_size"
                android:layout_height="@dimen/memory_flower_size"
                android:id="@+id/button_memory_3_2"
                android:layout_gravity="right"
                android:onClick="tapped"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_row="2"
                android:layout_column="1" />

            <Button
                android:background="@drawable/memory_flower_default"
                android:layout_width="@dimen/memory_flower_size"
                android:layout_height="@dimen/memory_flower_size"
                android:id="@+id/button_memory_3_3"
                android:layout_gravity="right"
                android:onClick="tapped"
                android:layout_row="2"
                android:layout_column="2" />

        </GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="0"
                android:id="@+id/tapping_counter"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="57dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="0"
                android:id="@+id/tapping_countdown"
                android:layout_alignTop="@+id/tapping_counter"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start"
                android:id="@+id/tapping_start_stop"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:onClick="buttonStartStop"
                android:longClickable="true" />
        </RelativeLayout>

    </LinearLayout>
</ViewFlipper>